fix the div wrap issue for card-drop-down component and adjust minor style

--- a/src/components/cart-item/cart-item.styles.scss
+++ b/src/components/cart-item/cart-item.styles.scss
@@ -1,7 +1,7 @@
 .cart-item {
   width: 100%;
   display: flex;
-  height: 80px;
+  height: auto;
   margin-bottom: 15px;
 
   img {
